rework to follow mobile first approach

--- a/src/components/gm-football-standings/gm-football-standings.scss
+++ b/src/components/gm-football-standings/gm-football-standings.scss
@@ -1,7 +1,7 @@
+@import '../../styles/index';
 
-
-table { 
+table {
   width: 100%;
   border-spacing: 0px;
-  table-layout:fixed;
+  table-layout: fixed;
 }
