--- a/src/components/gm-football-standings/gm-standing-row/gm-standing-row.scss
+++ b/src/components/gm-football-standings/gm-standing-row/gm-standing-row.scss
@@ -1,3 +1,5 @@
+@import '../../../styles';
+
 :host {
   display: table-row;
   border-color: inherit;
@@ -7,31 +9,41 @@
     margin: 0;
     padding: 0.9em 0;
     box-sizing: border-box;
+    font-size: 18px;
     text-align: center;
     color: var(--table-color, #757575);
     border-top: var(--table-border-color, 1px solid #f0f0f0);
+
+    &.hide-mobile {
+      display: none;
+    }
   
     &:nth-child(3), &:first-of-type {
       text-align: left;
     }
 
     &:first-of-type {
-      font-size: 16px;
       font-weight: bold;
       padding-left: 8px;
     }
 
     img {
-      width: 16px;
-      height: 16px;
+      width: 27px;
+      height: 27px;
       vertical-align: middle;
       padding-right: 10px;
     }
-  }
-}
 
-@media screen and (max-width: 900px) {
-  .hide-cell {
-    display: none;
+    @media (min-width: $breakpoint-tablet) {
+      &.show-tablet {
+        display: table-cell;
+      }
+    }
+  
+    @media (min-width: $breakpoint-desktop) {
+      &.hide-mobile {
+        display: table-cell;
+      }
+    }
   }
 }
