fix css issue with team logo name

--- a/src/components/gm-football-standings/gm-standing-header/gm-standing-header.scss
+++ b/src/components/gm-football-standings/gm-standing-header/gm-standing-header.scss
@@ -23,7 +23,7 @@
       text-align: left;
     }
 
-    &:nth-child(3) {
+    &.logo-team-name {
       width: auto;
       text-align: left;
     }
