--- a/src/components/gm-football-standings/gm-standing-row/gm-standing-row.scss
+++ b/src/components/gm-football-standings/gm-standing-row/gm-standing-row.scss
@@ -18,7 +18,7 @@
       display: none;
     }
   
-    &:nth-child(3), &:first-of-type {
+    &.logo-team-name, &:first-of-type {
       text-align: left;
     }
 
